force-app/main/default/objects/Key_Action_Decision__c/Key_Action_Decision__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object to track action items and key decisions related to the project.</description>
    <label>Key Action/Decision</label>
    <nameField>
        <label>Key Action/Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Actions/Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>