force-app/main/default/objects/Key_Action_Decision__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Completion date of Key Action/Decision</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>