force-app/main/default/objects/Key_Action_Decision__c/fields/Date_Decision_was_made__c.field-meta.xml
<CustomField>
    <fullName>Date_Decision_was_made__c</fullName>
    <label>Date Decision was made</label>
    <type>Date</type>
</CustomField>