force-app/main/default/objects/Key_Action_Decision__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Number of days Key Action/Decision remained open</description>
    <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), NOW() - CreatedDate,  Completed_Date__c - (DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>