force-app/main/default/objects/Key_Action_Decision__c/fields/Decision_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Decision_Outcome__c</fullName>
    <description>Description of outcome of Key Action/Decision</description>
    <inlineHelpText>Enter details of the outcome of the action item (what was determined) or the decision reached (what was agreed to, which option was selected). This field is required when Status is Completed.</inlineHelpText>
    <label>Decision/Outcome</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>