force-app/main/default/objects/Key_Action_Decision__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Key Action/Decision</description>
    <inlineHelpText>Enter a detailed desription of the Action to be completed or the Decision needed.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>