force-app/main/default/objects/Key_Action_Decision__c/fields/Display_on_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Timeline</label>
    <type>Checkbox</type>
</CustomField>