force-app/main/default/objects/Key_Action_Decision__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Days exceeded</description>
    <inlineHelpText>Enter the date when the Action Item must be completed or the Decision must be made. Items not completed by the Due Date pose a risk to deliverables.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>