force-app/main/default/objects/Key_Action_Decision__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>