force-app/main/default/objects/Key_Action_Decision__c/fields/Key_Action_Decision__c.field-meta.xml
<CustomField>
    <fullName>Key_Action_Decision__c</fullName>
    <description>Key Action/Decision number</description>
    <displayFormat>KAD-{00000}</displayFormat>
    <label>Key Action/Decision #</label>
    <type>AutoNumber</type>
</CustomField>