force-app/main/default/objects/Key_Action_Decision__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Details of options which are under evaluation</description>
    <inlineHelpText>Enter the options under evaluation.</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>