force-app/main/default/objects/Key_Action_Decision__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Days to close entered in Help Text are a suggestion, and can be changed by individual projects to meet their specific needs.</description>
    <inlineHelpText>Normal Priority items should be closed within 5 business days. High Priority items should be closed within 2 business days.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#F3D904</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>