force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Capability__c.field-meta.xml
<CustomField>
    <fullName>Related_Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capability related to current Key Action/Decision</description>
    <inlineHelpText>Indicate which Capability this Key Action/Key is related to, if any.</inlineHelpText>
    <label>Related Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>