force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Issue_Risk__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issue/risk related to current Key Action/Decision</description>
    <inlineHelpText>If this Key Action/Decision is directly related to a single Issue or Risk, select that Issue or Risk here.</inlineHelpText>
    <label>Related Issue/Risk</label>
    <referenceTo>Issues_Risks__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>