force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Key_Action_Decision__c.field-meta.xml
<CustomField>
    <fullName>Related_Key_Action_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Action/Decision related to current Key Action/Decision</description>
    <inlineHelpText>If this Key Action/Decision was created as a result of another Action Item or Decision, select the related item here.</inlineHelpText>
    <label>Related Key Action/Decision</label>
    <referenceTo>Key_Action_Decision__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>