force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Question_Log__c.field-meta.xml
<CustomField>
    <fullName>Related_Question_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Question Log</label>
    <referenceTo>Question_Log__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>