force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Release__c.field-meta.xml
<CustomField>
    <fullName>Related_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release related to current  Key Action/Decision</description>
    <inlineHelpText>Select the Release that this Key Action/Decision is related to.</inlineHelpText>
    <label>Related Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>