force-app/main/default/objects/Key_Action_Decision__c/fields/Related_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Request related to current  Key Action/Decision</description>
    <inlineHelpText>If this Key Action/Decision is directly related to a single Request, select that Request here.</inlineHelpText>
    <label>Related Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>