force-app/main/default/objects/Key_Action_Decision__c/fields/SOURCE_ID__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_ID__c</fullName>
    <label>SOURCE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>