force-app/main/default/objects/Key_Action_Decision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of  Key Action/Decision</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#A53711</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#419249</color>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>