force-app/main/default/objects/Key_Action_Decision__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Key Actions/Decisions</relationshipLabel>
    <relationshipName>Key_Actions_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>