force-app/main/default/objects/Key_Action_Decision__c/recordTypes/Action_Item.recordType-meta.xml
<RecordType>
    <fullName>Action_Item</fullName>
    <active>true</active>
    <description>Used to document Action Items that need to be completed by resources on the Program/Project.</description>
    <label>Action Item</label>
</RecordType>