force-app/main/default/objects/Key_Action_Decision__c/recordTypes/Key_Decision.recordType-meta.xml
<RecordType>
    <fullName>Key_Decision</fullName>
    <active>true</active>
    <description>Used to track Key Decisions that impact the Program/Project.</description>
    <label>Key Decision</label>
</RecordType>