force-app/main/default/objects/Key_Action_Decision__c/validationRules/Decision_Outcome_Required_when_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Outcome_Required_when_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c, &quot;Completed&quot;) &amp;&amp; ISNULL( Decision_Outcome__c )</errorConditionFormula>
    <errorDisplayField>Decision_Outcome__c</errorDisplayField>
    <errorMessage>Decision/Outcome is required when Status is Completed.</errorMessage>
</ValidationRule>