force-app/main/default/objects/Key_Action_Decision__c/listViews/My_Open_Action_Items.listView-meta.xml
<ListView>
    <fullName>My_Open_Action_Items</fullName>
    <columns>NAME</columns>
    <columns>Key_Action_Decision__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Description__c</columns>
    <columns>Decision_Outcome__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Key_Action_Decision__c.Action_Item</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Open Action Items</label>
</ListView>